tests/syntax-error/string-return.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g string-return.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: string-return.silly:16:19: error: syntax error
// CHECK:    16 | FUNCTION foo( ) : STRING[4]
// CHECK:       |                   ^










FUNCTION foo( ) : STRING[4]
{
    RETURN "hi";
};
